objects/metazoa3__snapshot_story__c.object
<CustomObject>
    <description>his is an administrative object for Snapshot Change and Release Automation. This object records the user story information for the parent Snapshot Sprint.</description>
    <fields>
        <fullName>metazoa3__actual_work__c</fullName>
        <label>Actual Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>metazoa3__constraint_date__c</fullName>
        <label>Constraint Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>metazoa3__constraint_type__c</fullName>
        <label>Constraint Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Constraint</fullName>
                </value>
                <value>
                    <fullName>Fixed Start Date</fullName>
                </value>
                <value>
                    <fullName>Fixed Finish Date</fullName>
                </value>
                <value>
                    <fullName>Must Start After</fullName>
                </value>
                <value>
                    <fullName>Must Finish After</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>metazoa3__created_username__c</fullName>
        <label>Created Username</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>metazoa3__destination_username__c</fullName>
        <label>Destination Username</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>metazoa3__detailed_comments__c</fullName>
        <label>Detailed Comments</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>metazoa3__display_index__c</fullName>
        <label>Display Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>metazoa3__extra_field_one__c</fullName>
        <label>Extra Field One</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>metazoa3__extra_field_two__c</fullName>
        <label>Extra Field Two</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>metazoa3__extra_flag_one__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Extra Flag One</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>metazoa3__extra_flag_two__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Extra Flag Two</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>metazoa3__finish_date__c</fullName>
        <label>Finish Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>metazoa3__functional_specifications__c</fullName>
        <label>Functional Specifications</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>metazoa3__kanban_stage__c</fullName>
        <label>Kanban Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Backlog</fullName>
                </value>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Developing</fullName>
                </value>
                <value>
                    <fullName>Waiting</fullName>
                </value>
                <value>
                    <fullName>Testing</fullName>
                </value>
                <value>
                    <fullName>Deployment</fullName>
                </value>
                <value>
                    <fullName>Finished</fullName>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>metazoa3__object_type__c</fullName>
        <label>Object Type</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>metazoa3__parent_links__c</fullName>
        <label>Parent Links</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>metazoa3__percent_complete__c</fullName>
        <formula>metazoa3__actual_work__c / metazoa3__planned_work__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Complete</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>metazoa3__planned_work__c</fullName>
        <label>Planned Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>metazoa3__snapshot_sprint__c</fullName>
        <label>Snapshot Sprint</label>
        <referenceTo>metazoa3__snapshot_sprint__c</referenceTo>
        <relationshipLabel>Snapshot Stories</relationshipLabel>
        <relationshipName>Snapshot_Stories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>metazoa3__source_username__c</fullName>
        <label>Source Username</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>metazoa3__start_date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>metazoa3__story_documentation__c</fullName>
        <label>Story Documentation</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>metazoa3__story_owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Story Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Snapshot_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>metazoa3__story_theme__c</fullName>
        <label>Story Theme</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Coding</fullName>
                    <color>#0B6FCE</color>
                    <label>Coding</label>
                </value>
                <value>
                    <fullName>Metadata</fullName>
                    <color>#78C953</color>
                    <label>Metadata</label>
                </value>
                <value>
                    <fullName>Security</fullName>
                    <color>#E27001</color>
                    <label>Security</label>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Optimization</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>metazoa3__technical_specifications__c</fullName>
        <label>Technical Specifications</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>metazoa3__total_duration__c</fullName>
        <label>Total Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>metazoa3__user_story__c</fullName>
        <label>User Story</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>metazoa3__working_branch__c</fullName>
        <label>Working Branch</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Snapshot Story</label>
    <listViews>
        <fullName>metazoa3__All</fullName>
        <columns>NAME</columns>
        <columns>metazoa3__story_theme__c</columns>
        <columns>metazoa3__story_owner__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>metazoa3__snapshot_sprint__c</field>
            <operation>equals</operation>
            <value>Marketing Project</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>metazoa3__All_Active_Stories</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>metazoa3__kanban_stage__c</field>
            <operation>equals</operation>
            <value>Draft,Backlog,Requested,Developing,Waiting,Testing</value>
        </filters>
        <label>All Active Stories</label>
    </listViews>
    <listViews>
        <fullName>metazoa3__All_Archived_Stories</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>metazoa3__kanban_stage__c</field>
            <operation>equals</operation>
            <value>Archived</value>
        </filters>
        <label>All Archived Stories</label>
    </listViews>
    <listViews>
        <fullName>metazoa3__All_Completed_Stories</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>metazoa3__kanban_stage__c</field>
            <operation>equals</operation>
            <value>Deployment,Finished</value>
        </filters>
        <label>All Completed Stories</label>
    </listViews>
    <listViews>
        <fullName>metazoa3__My_Active_Stories</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>metazoa3__kanban_stage__c</field>
            <operation>equals</operation>
            <value>Draft,Backlog,Requested,Developing,Waiting,Testing</value>
        </filters>
        <label>My Active Stories</label>
    </listViews>
    <listViews>
        <fullName>metazoa3__My_Archived_Stories</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>metazoa3__kanban_stage__c</field>
            <operation>equals</operation>
            <value>Archived</value>
        </filters>
        <label>My Archived Stories</label>
    </listViews>
    <listViews>
        <fullName>metazoa3__My_Completed_Stories</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>metazoa3__kanban_stage__c</field>
            <operation>equals</operation>
            <value>Deployment,Finished</value>
        </filters>
        <label>My Completed Stories</label>
    </listViews>
    <listViews>
        <fullName>metazoa3__My_Stories</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>My Stories</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Snapshot Stories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>